<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_drawer_item_1"
            android:icon="@drawable/icon_menu_login"
            android:title="@string/menu_on_item_1" />
        <item
            android:id="@+id/navigation_drawer_item_2"
            android:icon="@drawable/icon_menu_policy"
            android:title="@string/menu_on_item_2" />

        <item
            android:id="@+id/navigation_drawer_item_3"
            android:icon="@drawable/icon_menu_assistence"
            android:title="@string/menu_on_item_3" />

        <item
            android:id="@+id/navigation_drawer_item_4"
            android:icon="@drawable/icon_menu_workshop"
            android:title="@string/menu_on_item_4" />

        <item
            android:id="@+id/navigation_drawer_item_5"
            android:icon="@drawable/icon_menu_club"
            android:title="@string/menu_on_item_5" />

        <item
            android:id="@+id/navigation_drawer_item_6"
            android:icon="@drawable/icon_menu_notification"
            android:title="@string/menu_on_item_6"
            app:showAsAction="always" />

        <item
            android:id="@+id/navigation_drawer_item_7"
            android:icon="@drawable/icon_menu_call"
            android:title="@string/menu_on_item_7" />

        <item
            android:id="@+id/navigation_drawer_item_8"
            android:icon="@drawable/icon_menu_exit"
            android:title="@string/menu_on_item_8" />
    </group>

</menu>