<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_drawer_item_1"
            android:icon="@drawable/icon_menu_login"
            android:title="@string/menu_off_item_1" />
        <item
            android:id="@+id/navigation_drawer_item_2"
            android:icon="@drawable/icon_menu_register"
            android:title="@string/menu_off_item_2" />

        <item
            android:id="@+id/navigation_drawer_item_3"
            android:icon="@drawable/icon_menu_assistence"
            android:title="@string/menu_off_item_3" />

        <item
            android:id="@+id/navigation_drawer_item_4"
            android:icon="@drawable/icon_menu_workshop"
            android:title="@string/menu_off_item_4" />

        <item
            android:id="@+id/navigation_drawer_item_5"
            android:icon="@drawable/icon_menu_club"
            android:title="@string/menu_off_item_5" />

        <item
            android:id="@+id/navigation_drawer_item_6"
            android:icon="@drawable/icon_menu_call"
            android:title="@string/menu_off_item_6" />


    </group>

</menu>