<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#40000000">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default_6"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="3dp"
        app:cardBackgroundColor="@color/background_box">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default_4"
                android:layout_marginLeft="@dimen/margin_default_4"
                android:layout_marginRight="@dimen/margin_default_4"
                android:textSize="@dimen/font_default_3"
                android:textColor="@color/text_default_6"
                android:text="@string/free_navigation"
                android:textStyle="bold"
                android:textAlignment="center"/>/>

            <TextView
                android:id="@+id/tv_dialog_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default_4"
                android:layout_marginBottom="@dimen/margin_default_4"
                android:layout_marginLeft="@dimen/margin_default_4"
                android:layout_marginRight="@dimen/margin_default_4"
                android:textSize="@dimen/font_default_2"
                android:text="@string/free_navigation_desc"
                android:textColor="@color/text_default_3"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/bt_ok"
                style="@style/ButtonDefault"
                android:layout_width="wrap_content"
                android:background="@drawable/bt_background_app"
                android:filterTouchesWhenObscured="true"
                android:text="@string/button_ok_understand"
                android:textColor="@color/color_button_default_app" />


            <CheckBox
                android:id="@+id/checkbox_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_default_4"
                android:layout_marginTop="@dimen/margin_default_4"
                android:layout_marginRight="@dimen/margin_default_4"
                android:layout_marginBottom="@dimen/margin_default_4"
                android:filterTouchesWhenObscured="true"
                android:text="@string/free_navigation_check" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>