<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9000000"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default_2"
        android:background="@color/background_dialog"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title_cod_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default_4"
            android:gravity="center"
            android:text="@string/cod_title"
            android:textColor="@color/text_default_6"
            android:textSize="@dimen/font_default_5" />

        <TextView
            android:id="@+id/tv_instructions_full_cod_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default_2"
            android:layout_marginRight="@dimen/margin_default_2"
            android:layout_marginTop="@dimen/margin_default_2"
            android:text="@string/cod_success"
            android:textColor="@color/text_default_11"
            android:textSize="@dimen/font_default_2" />

        <TextView
            android:id="@+id/tv_instructions_cod_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default_2"
            android:text="@string/cod_success"
            android:textColor="@color/text_default_11"
            android:textSize="@dimen/font_default_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margin_default_2"
            android:background="@color/line_default_1" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default_2"
            android:layout_marginRight="@dimen/margin_default_2"
            android:gravity="center"
            android:textColor="@color/text_default_7"
            android:textSize="@dimen/font_default_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margin_default_2"
            android:background="@color/line_default_1" />


        <Button
            android:id="@+id/bt_copy_cod"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:background="@drawable/bt_background_app"
            android:filterTouchesWhenObscured="true"
            android:text="@string/button_copy_bar_cod"
            android:textColor="@color/color_button_default_app" />

        <Button
            android:id="@+id/bt_site_santander"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:background="@drawable/bt_background_app_second"
            android:filterTouchesWhenObscured="true"
            android:text="@string/button_register"
            android:textColor="@color/color_button_default_app_second" />

        <LinearLayout
            android:id="@+id/ll_instructions_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default_2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_instructions_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:filterTouchesWhenObscured="true"
                android:text="@string/instrucao_completa"
                android:textColor="@color/text_default_6"
                android:textSize="@dimen/font_default_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_default_6" />


        </LinearLayout>

    </LinearLayout>
</LinearLayout>
